# amchich

./: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
server/: index.ts  package.json
server2/: .gitignore  README.md  cloudflare.py  db.py  encrypt.py  expire.py  main.py  pyproject.toml
server2/app/: cloudflare.py  db.py  expire.py  main.py  models.py  tokenutils.py
src/: App.tsx  main.tsx  vite-env.d.ts
src/components/: landingpage.tsx
src/components/chat/: assistantmessage.tsx  chatfiletags.tsx  chatform.tsx  chatformoptions.tsx  chatmessages.tsx  chatmodelselector.tsx  chatselectfiles.tsx  chattextarea.tsx  copybutton.tsx  streamingmessage.tsx  usermessage.tsx
src/components/conversations/: conversationheader.tsx  conversationitem.tsx  conversationitems.tsx  conversationsidebar.tsx
src/components/models/: expense.tsx  modelselector.tsx
src/components/ui/: markdowntext.tsx  sidebar.tsx
src/hooks/: useautoscroll.ts  usechat.ts  usemounted.ts  useopenrouter.ts
src/lib/: cloudflaretoken.ts  db.ts  decrypt.ts  events.ts  files.ts  llmmodels.ts  titlegenerator.ts  tokenutils.ts  utils.ts  worker.ts  workerpool.ts
